# rust-ai-observability

./: .env  Cargo.toml  README.md
alert-service/: Cargo.toml
log-collector/: Cargo.toml
log-collector/src/: main.rs  pipeline.rs
log-collector/src/inputs/: http.rs  mod.rs
log-processor/: Cargo.toml
search-service/: Cargo.toml
