[package]
name = "log-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
axum-test-helper = "0.1"
