[package]
name = "log-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
hostname = "0.3"
clickhouse = { version = "0.11", features = ["uuid"] }
dotenv = "0.15"


[dev-dependencies]
axum-test-helper = "0.1"
